force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/PBS_AAAP_Audit_Offer_Inventory__c.object-meta.xml
<CustomObject>
    <label>Audit Offer Inventory</label>
    <nameField>
        <label>Audit Offer Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Offer Inventory</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>