force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_ADDTL_AMT_FOR_GOVT_OWNED_EQUIP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ADDTL_AMT_FOR_GOVT_OWNED_EQUIP__c</fullName>
    <label>Additional Amount for Govt. Owned Equip.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>