force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_AMORTIZ_RATE_T1_UPTO_20__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AMORTIZ_RATE_T1_UPTO_20__c</fullName>
    <label>Amortized Rate T1 - T20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>