force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_ARCH_ENG_FEES__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ARCH_ENG_FEES__c</fullName>
    <label>Architectural Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>