force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_ARCHITECTURAL_AND_ENG_FEES_UOM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ARCHITECTURAL_AND_ENG_FEES_UOM__c</fullName>
    <label>Architectural and Engineering Fee UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$ Per ABOA</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>