force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_BASE_OPERATING_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BASE_OPERATING_COSTS__c</fullName>
    <label>Base Operating Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>