force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_CITY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CITY__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>