force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_COST_FOR_TI__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COST_FOR_TI__c</fullName>
    <label>Cost for TI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>