force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_DATE_SPACE_AVAILABILITY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DATE_SPACE_AVAILABILITY__c</fullName>
    <label>Date Space Available</label>
    <type>Date</type>
</CustomField>