force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_FULL_SERV_RENT_OPTION_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FULL_SERV_RENT_OPTION_TERM__c</fullName>
    <label>Option Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>