force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_GC_OVERHEAD_AND_PROF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GC_OVERHEAD_AND_PROF__c</fullName>
    <label>General Contractor&apos;s Overhead and Profit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>