force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_GSA_EXPIRE_LEASE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_GSA_EXPIRE_LEASE_NUMBER__c</fullName>
    <label>Expiring Lease Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>