force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_IDENTIFIER_FROM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER_FROM__c</fullName>
    <label>Minimum Space Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>