force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_IDENTIFIER_TO__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER_TO__c</fullName>
    <label>Maximum Space Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>