force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_INVENTORY_DATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_INVENTORY_DATE__c</fullName>
    <label>INVENTORY DATE</label>
    <type>Date</type>
</CustomField>