force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_INVENTORY_YEAR__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_INVENTORY_YEAR__c</fullName>
    <label>PBS_AAAP_INVENTORY_YEAR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>