force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_LEASE_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEASE_TERM__c</fullName>
    <label>Lease Term</label>
    <length>22</length>
    <type>Text</type>
</CustomField>