force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_NO_OF_MONTHS_FREE_OPTION_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_NO_OF_MONTHS_FREE_OPTION_TERM__c</fullName>
    <label>Option Term Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>