force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_OFFER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OFFER_NUMBER__c</fullName>
    <label>PBS_AAAP_OFFER_NUMBER</label>
    <length>18</length>
    <type>Text</type>
</CustomField>