force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_OFFER_OWNER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OFFER_OWNER__c</fullName>
    <label>Offer Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>