force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_OT_RATE_COOLING_HEAT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OT_RATE_COOLING_HEAT__c</fullName>
    <label>Overtime Rate for After Hours HVAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>