force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_PV_Value__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PV_Value__c</fullName>
    <label>PV Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>