force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Rate_ID__c</fullName>
    <description>This will store the Rate Id (internal to Salesforce record identifier. It helps to identify a unique record)</description>
    <label>Rate ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>