force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_Space_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Space_ID__c</fullName>
    <description>This will store the Space Id (internal to Salesforce record identifier. It helps to identify a unique record)</description>
    <label>Space ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>