force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_STREET_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_STREET_ADDRESS__c</fullName>
    <label>Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>