force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_TOTAL_BOMA_USF_OFFERED__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TOTAL_BOMA_USF_OFFERED__c</fullName>
    <label>Total BOMA USF Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>