force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/PBS_AAAP_TWO_YEAR_EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TWO_YEAR_EXTENSION__c</fullName>
    <label>Two Year Extension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>