force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/fields/RLP_ID__c.field-meta.xml
<CustomField>
    <fullName>RLP_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RLP ID</label>
    <referenceTo>PBS_AAAP_RLP__c</referenceTo>
    <relationshipLabel>Audit Offer Inventory</relationshipLabel>
    <relationshipName>Audit_Offer_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>