force-app/main/default/objects/PBS_AAAP_Audit_Offer_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Offer_ID__c</field>
        <operation>equals</operation>
        <value>SFO-Offer-017826</value>
    </filters>
    <label>All</label>
</ListView>